# MAVS-Self-Learning-1A

./: .gitattributes  .gitignore  CLAIMS.md  LICENSE  Makefile  Path.md  README.md  REPRODUCIBILITY.md  UPSTREAM_PROVENANCE.md  WorkPlan.md  pyproject.toml
docs/: baseline_sources.md
provenance/: upstream_import_exclusions.json
results/: RESULTS_INDEX.md
schemas/: active_governance_configuration.schema.json  candidate_configuration.schema.json  certification_report.schema.json  decision_trace.schema.json  diagnostic_proposal.schema.json  learning_event.schema.json  participant_state.schema.json  phase1_trace.schema.json  phase2_failure_card.schema.json  phase2_trace.schema.json  phase3_candidate_configuration.schema.json  phase3_certification_card.schema.json  phase3_consolidation_card.schema.json  phase3_failure_capsule.schema.json  phase3_genealogy_report.schema.json  phase3_investigation_card.schema.json  phase3_learning_event.schema.json  phase3_promotion_card.schema.json  phase3_proposal_card.schema.json  phase3_rejected_candidate.schema.json  phase3_rollback_card.schema.json  phase3_terminal_error_card.schema.json  phase3_trace.schema.json  phase3_uncertainty_entry.schema.json  phase5_consolidation_card.schema.json  phase5_participant_checkpoint.schema.json  phase5_terminal_error_card.schema.json  phase5_trace.schema.json  update_decision.schema.json  world_manifest.schema.json
scripts/: aggregate_phase0.py  aggregate_phase1.py  aggregate_phase2.py  aggregate_phase3.py  aggregate_phase4.py  aggregate_phase5.py  aggregate_phase8.py  aggregate_phase9.py  (+109 more)
(+3438 files in other folders)
